k8s/signalr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalr-hub
  labels:
    app: signalr-hub
spec:
  replicas: 3
  selector:
    matchLabels:
      app: signalr-hub
  template:
    metadata:
      labels:
        app: signalr-hub
    spec:
      containers:
      - name: signalr-hub
        image: signalr-hub:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: signalr-redis
  labels:
    app: signalr-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signalr-redis
  template:
    metadata:
      labels:
        app: signalr-redis
    spec:
      containers:
      - name: signalr-redis
        image: redis:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: signalr-sql-server-service
spec:
  selector:
    app: signalr-sql-server
  ports:
    - protocol: TCP
      port: 1433

---

apiVersion: v1
kind: Service
metadata:
  name: signalr-hub-service
spec:
 type: LoadBalancer
 ports:
 - port: 80
 selector:
   app: signalr-hub

---

apiVersion: v1
kind: Service
metadata:
  name: signalr-redis-service
spec:
  selector:
    app: signalr-redis
  ports:
  - protocol: TCP
    port: 6379

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signalr-hub-ingress
  namespace: default
spec:
  rules:
  - host: signalr-ingress.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: signalr-hub-service
            port:
              number: 80
        pathType: ImplementationSpecific

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalr-sql-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signalr-sql-server
  minReadySeconds: 5
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: signalr-sql-server
    spec:
      containers:
        - name: signalr-sql-server
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
---

apiVersion: v1
kind: Service
metadata:
  name: signalr-sql-server-service
spec:
  selector:
    app: signalr-sql-server
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: ClusterIP
